--- a/guidelines.html
+++ b/guidelines.html
@@ -31,19 +31,10 @@
 		<link href="/css/style.css?20260209.1" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('js', new Date());
-		gtag('config', 'G-RE3FS524EK');
-		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
-		</script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
 		<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
 		gtag('js', new Date());
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
@@ -99,7 +90,7 @@
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item">Volume 2 (2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
@@ -108,7 +99,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Volume 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -119,12 +110,19 @@
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
-										<li><a href="/ai" class="dropdown-item">AI in Research Policy</a></li>
+										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
-										<li><a href="/open-submission" class="dropdown-item">Open Submission Policy</a></li>
+										<li><a href="/open-submission" class="dropdown-item">Open Submission</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item">Archiving & Management</a></li>
+										<li><a href="/corrections-retractions" class="dropdown-item">Corrections, Retractions & Withdrawal</a></li>
+										<li><a href="/appeals-complaints" class="dropdown-item">Appeals & Complaints</a></li>
+										<li><a href="/conflict-of-interest" class="dropdown-item">Conflict of Interest</a></li>
+										<li><a href="/plagiarism" class="dropdown-item">Plagiarism</a></li>
+										<li><a href="/editorial" class="dropdown-item">Editorial</a></li>
+										<li><a href="/research-integrity" class="dropdown-item">Research Integrity</a></li>
+										<li><a href="/copyright-licensing" class="dropdown-item">Copyright and Licensing</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
@@ -205,7 +203,7 @@
 						<section class="card p-2 p-lg-3 mb-5 bg-light shadow-lg rounded-3 border border-opacity-10">
 							<div class="card-body">
 								<p class="lead fs-5">
-									These guidelines provide complete instructions for preparing and submitting manuscripts to <strong>SOLAV Journal (Scholarly Open-Library of Applied Visioneering)</strong>. Adherence to these guidelines is essential for efficient processing and peer review. Manuscripts that do not comply may be returned for correction before review.
+									These guidelines provide complete instructions for preparing and submitting manuscripts to <strong>SOLAV Journal (A Scholarly Platform for Interdisciplinary Applied Futures Research)</strong>. Adherence to these guidelines is essential for efficient processing and peer review. Manuscripts that do not comply may be returned for correction before review.
 								</p>
 								<div class="alert alert-primary mt-4" role="alert">
 									<h5 class="alert-heading"><i class="bi bi-lightbulb me-2"></i>Key Features of SOLAV's Process</h5>
@@ -213,7 +211,8 @@
 										<li><strong>Continuous Publication:</strong> No issue-based delays; articles published as soon as ready</li>
 										<li><strong>Interdisciplinary Focus:</strong> We welcome work bridging traditional field boundaries</li>
 										<li><strong>Open Science:</strong> CC BY 4.0 license with support for open data and code</li>
-										<li><strong>Rapid Review:</strong> Target initial decision within 28 days</li>
+										<li><strong>Rapid Review:</strong> Target initial decision within 4-6 weeks</li>
+										<li><strong>Long-term Preservation:</strong> All articles receive permanent DOIs via Zenodo (CERN), a CoreTrustSeal-certified repository.</li>
 									</ul>
 								</div>
 							</div>
@@ -240,6 +239,7 @@
 							<div class="card bg-light shadow-lg rounded-3 border border-opacity-10">
 								<div class="card-body p-4">
 									<h3 class="h4 mb-3"><i class="bi bi-shield-check text-primary me-2"></i>Terms of Submission</h3>
+									All submissions undergo single-blind peer review by at least two independent experts.
 									<p>By submitting to SOLAV Journal, authors confirm that:</p>
 									<ol>
 										<li>The manuscript represents original work not previously published</li>
@@ -248,6 +248,8 @@
 										<li>Required ethical approvals have been obtained</li>
 										<li>Authors accept our <a href="/review" class="link-primary">editorial policies</a></li>
 									</ol>
+									<p>Editorial decisions are made independently by the academic editorial board. The publisher (Leothar Company) has no influence over acceptance/rejection decisions.</p>
+									<p>SOLAV adheres to the Committee on Publication Ethics (COPE) Core Practices.</p>
 									<p class="mb-0"><em>For technical issues with submission, contact: <a href="mailto:submission@solav.me">submission@solav.me</a></em></p>
 								</div>
 							</div>
@@ -268,7 +270,7 @@
 									<tbody>
 										<tr>
 											<td><strong>Research Article</strong></td>
-											<td>Original research presenting novel findings with sufficient detail for reproducibility. Must include explicit discussion of applied implications or "visioneering" for future applications.</td>
+											<td>Original research presenting novel findings with sufficient detail for reproducibility. Must include explicit discussion of applied implications for future applications.</td>
 											<td>8,000</td>
 											<td>250 words</td>
 										</tr>
@@ -292,7 +294,7 @@
 										</tr>
 										<tr>
 											<td><strong>Perspective / Vision</strong></td>
-											<td>Forward-looking articles presenting novel viewpoints, hypotheses, or speculative "visioneering" on future technological directions and societal impacts.</td>
+											<td>Forward-looking articles presenting novel viewpoints, hypotheses, or speculative on future technological directions and societal impacts.</td>
 											<td>4,000</td>
 											<td>200 words</td>
 										</tr>
@@ -318,7 +320,7 @@
 										<div class="card-body p-4">
 											<h3 class="h4 mb-3"><i class="bi bi-file-earmark-text text-primary me-2"></i>General Formatting</h3>
 											<ul class="mb-0">
-												<li><strong>Language:</strong> British or American English (consistent throughout), and Arabic</li>
+												<li><strong>Language:</strong> British or American English (consistent throughout)</li>
 												<li><strong>Font:</strong> Times New Roman, 12pt</li>
 												<li><strong>Spacing:</strong> 1 line spacing</li>
 												<li><strong>Margins:</strong> 2.5 cm (1 inch) on all sides</li>
@@ -362,7 +364,7 @@
 										<div class="accordion-body">
 											<ul>
 												<li><strong>Title:</strong> Concise and informative (maximum 20 words), reflecting the interdisciplinary nature of the work, if applicable.</li>
-												<li><strong>Authors:</strong> Full names of all authors. Affiliations are optional and not mandatory; submissions from independent researchers are welcome.</li>
+												<li><strong>Authors:</strong> Full names of all authors. Authors may include institutional affiliations where applicable. Independent researchers without formal affiliations are welcome to submit.</li>
 												<li><strong>Corresponding Author:</strong> Mark with an asterisk (*) and provide full contact details.</li>
 												<li><strong>ORCID IDs:</strong> Optional but strongly encouraged for all authors. Register at <a href="https://orcid.org" target="_blank">orcid.org</a>.</li>
 												<li><strong>Abstract:</strong> Structured (Objective, Methods, Results, Conclusion) or unstructured, depending on the article type.</li>
@@ -562,7 +564,7 @@ Virtanen, P., et al. (2020). SciPy 1.0: Fundamental algorithms for scientific co
 									</div>
 									<div class="form-check mb-3">
 										<input class="form-check-input" type="checkbox" id="check6">
-										<label class="form-check-label" for="check6">Applied implications or "visioneering" elements are included</label>
+										<label class="form-check-label" for="check6">Applied implications or elements are included</label>
 									</div>
 									<div class="form-check mb-3">
 										<input class="form-check-input" type="checkbox" id="check7">
@@ -620,7 +622,7 @@ Virtanen, P., et al. (2020). SciPy 1.0: Fundamental algorithms for scientific co
 								</button>
 							</div>
 							<div class="form-text mt-2 ps-1">
-								<small class="opacity-75">Indexing provided by Google for solav.me</small>
+								<small class="opacity-75">Search provided by Google</small>
 							</div>
 						</form>
 
@@ -677,6 +679,7 @@ Virtanen, P., et al. (2020). SciPy 1.0: Fundamental algorithms for scientific co
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
 							<span class="issn-text">ISSN request pending</span>
 						</div>
+						<small class="text-muted text-xs">Adheres to Committee on Publication Ethics (COPE) Core Practices</small>
 
 					</div>
 
