--- a/about.html
+++ b/about.html
@@ -35,7 +35,6 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
-		gtag('js', new Date());
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
 		</script>
@@ -90,7 +89,7 @@
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item">Volume 2 (2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
@@ -99,7 +98,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Volume 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -110,12 +109,19 @@
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
-										<li><a href="/ai" class="dropdown-item">AI in Research Policy</a></li>
+										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
-										<li><a href="/open-submission" class="dropdown-item">Open Submission Policy</a></li>
+										<li><a href="/open-submission" class="dropdown-item">Open Submission</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item">Archiving & Management</a></li>
+										<li><a href="/corrections-retractions" class="dropdown-item">Corrections, Retractions & Withdrawal</a></li>
+										<li><a href="/appeals-complaints" class="dropdown-item">Appeals & Complaints</a></li>
+										<li><a href="/conflict-of-interest" class="dropdown-item">Conflict of Interest</a></li>
+										<li><a href="/plagiarism" class="dropdown-item">Plagiarism</a></li>
+										<li><a href="/editorial" class="dropdown-item">Editorial</a></li>
+										<li><a href="/research-integrity" class="dropdown-item">Research Integrity</a></li>
+										<li><a href="/copyright-licensing" class="dropdown-item">Copyright and Licensing</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
@@ -232,18 +238,6 @@
 										<article class="card p-md-3 p-2 border-0 shadow-sm card-hover-primary h-100 mx-2">
 											<div class="card-body pb-0">
 												<h5 class="h5 text-center">
-													Journal Language
-												</h5>
-												<p class="text-center">
-													English, Arabic
-												</p>
-											</div>
-										</article>
-									</div>
-									<div class="swiper-slide h-auto py-3">
-										<article class="card p-md-3 p-2 border-0 shadow-sm card-hover-primary h-100 mx-2">
-											<div class="card-body pb-0">
-												<h5 class="h5 text-center">
 													Frequency
 												</h5>
 												<p class="text-center">
@@ -295,7 +289,7 @@
 													Publisher
 												</h5>
 												<p class="text-center">
-													Leothar
+													Leothar Company
 												</p>
 											</div>
 										</article>
@@ -367,6 +361,7 @@
 											</div>
 											<h4 class="h5 mb-3">Ethical Excellence</h4>
 											<p class="mb-0">Rigorous peer review and adherence to COPE guidelines ensure research integrity and credibility.</p>
+											<p class="mb-0">SOLAV adheres to the Committee on Publication Ethics (COPE) Core Practices.</p>
 										</div>
 									</div>
 								</div>
@@ -399,7 +394,7 @@
 									<i class="bi bi-speedometer2 fs-1 text-primary"></i>
 								</div>
 								<h4 class="h5 mb-3">Fast & Fair Review</h4>
-								<p class="mb-0">Double-blind peer review with <strong>4-6 week</strong> average decision time. Constructive feedback from interdisciplinary experts.</p>
+								<p class="mb-0">Single-blind peer review with <strong>4-6 week</strong> median decision time. Constructive feedback from interdisciplinary experts.</p>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3">
@@ -456,7 +451,7 @@
 											<span class="h3 mb-0 text-primary fw-bold">2</span>
 										</div>
 										<h4 class="h5 mb-3">Peer Review</h4>
-										<p class="mb-0">Double-blind review by 2-3 experts. Average <strong>4-6 weeks</strong> to first decision.</p>
+										<p class="mb-0">Single-blind review. Median <strong>4-6 weeks</strong> to first decision.</p>
 									</div>
 								</div>
 								<div class="col-md-4">
@@ -549,7 +544,7 @@
 									</div>
 									<div class="col-md-7">
 										Maher Asaad Baker
-										<br><span class="text-muted font-sm">Independent Researcher, Damascus, Sryia</span>
+										<br><span class="text-muted font-sm">Independent Researcher, Damascus, Syria</span>
 									</div>
 								</div>
 								<div class="border-bottom row mb-2">
@@ -569,13 +564,13 @@
 										<span class="text-primary">●</span> Khalil Rizq
 										<br>&emsp;<span class="text-muted font-sm">Independent Scholar, Riyadh, Saudi Arabia</span>
 										<br><span class="text-primary">●</span> Akram Abdulhafiz Al Sawadi
-										<br>&emsp;<span class="text-muted font-sm">Independent Scholar, Damascus, Sryia</span>
+										<br>&emsp;<span class="text-muted font-sm">Independent Scholar, Damascus, Syria</span>
 										<br><span class="text-primary">●</span> Yousef Abdullah
 										<br>&emsp;<span class="text-muted font-sm">Research Consultant, Riyadh, Saudi Arabia</span>
 										<br><span class="text-primary">●</span> Fuad Al-Qrize
 										<br>&emsp;<span class="text-muted font-sm">Independent Researcher, Ibb, Yemen</span>
 										<br><span class="text-primary">●</span> Obada Baker
-										<br>&emsp;<span class="text-muted font-sm">Research Consultant, Damascus, Sryia</span>
+										<br>&emsp;<span class="text-muted font-sm">Research Consultant, Damascus, Syria</span>
 									</div>
 								</div>
 
@@ -603,43 +598,6 @@
 								<a href="mailto:contact@solav.me" class="btn btn-lg btn-outline-primary rounded-pill px-5">
 									<i class="bi bi-envelope me-2"></i>Contact Us
 								</a>
-							</div>
-						</div>
-					</div>
-				</section>
-
-				<section class="mb-5">
-					<div class="row g-4">
-						<div class="col-md-6 col-lg-3">
-							<div class="card border-0 bg-primary text-white text-center py-4">
-								<div class="card-body">
-									<div class="display-4 fw-bold mb-2">100%</div>
-									<p class="mb-0">Open Access</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-3">
-							<div class="card border-0 bg-light text-center py-4">
-								<div class="card-body">
-									<div class="display-4 fw-bold mb-2 text-primary">4-6</div>
-									<p class="mb-0">Weeks to First Decision</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-3">
-							<div class="card border-0 bg-primary text-white text-center py-4">
-								<div class="card-body">
-									<div class="display-4 fw-bold mb-2">CC BY</div>
-									<p class="mb-0">Creative Commons License</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-3">
-							<div class="card border-0 bg-light text-center py-4">
-								<div class="card-body">
-									<div class="display-4 fw-bold mb-2 text-primary">25+</div>
-									<p class="mb-0">Years Archiving Guarantee</p>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -717,7 +675,7 @@
 								</button>
 							</div>
 							<div class="form-text mt-2 ps-1">
-								<small class="opacity-75">Indexing provided by Google for solav.me</small>
+								<small class="opacity-75">Search provided by Google</small>
 							</div>
 						</form>
 
@@ -774,7 +732,7 @@
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
 							<span class="issn-text">ISSN request pending</span>
 						</div>
-
+						<small class="text-muted text-xs">Adheres to Committee on Publication Ethics (COPE) Core Practices</small>
 					</div>
 
 					<div class="col-lg-2 col-md-4">
