--- a/aims-scope.html
+++ b/aims-scope.html
@@ -35,7 +35,6 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
-		gtag('js', new Date());
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
 		</script>
@@ -90,7 +89,7 @@
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item">Volume 2 (2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
@@ -99,7 +98,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Volume 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -110,12 +109,19 @@
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
-										<li><a href="/ai" class="dropdown-item">AI in Research Policy</a></li>
+										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
-										<li><a href="/open-submission" class="dropdown-item">Open Submission Policy</a></li>
+										<li><a href="/open-submission" class="dropdown-item">Open Submission</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item">Archiving & Management</a></li>
+										<li><a href="/corrections-retractions" class="dropdown-item">Corrections, Retractions & Withdrawal</a></li>
+										<li><a href="/appeals-complaints" class="dropdown-item">Appeals & Complaints</a></li>
+										<li><a href="/conflict-of-interest" class="dropdown-item">Conflict of Interest</a></li>
+										<li><a href="/plagiarism" class="dropdown-item">Plagiarism</a></li>
+										<li><a href="/editorial" class="dropdown-item">Editorial</a></li>
+										<li><a href="/research-integrity" class="dropdown-item">Research Integrity</a></li>
+										<li><a href="/copyright-licensing" class="dropdown-item">Copyright and Licensing</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
@@ -163,7 +169,7 @@
 						<div class="col-xl-12 col-md-12 text-center text-md-start p-5 py-2 pt-4">
 							<h2>Our Mission</h2>
 							<p class="lead fs-5">
-								The SOLAV Journal (Scholarly Open-Library of Applied Visioneering) aims to be the premier open-access platform for high-impact research that transcends traditional disciplinary boundaries. We are dedicated to publishing work that not only advances fundamental understanding but explicitly directs that knowledge toward tangible applications, innovative solutions, and forward-looking "visioneering" for societal and technological benefit.
+								The SOLAV Journal (A Scholarly Platform for Interdisciplinary Innovation and Applied Futures Research) aims to be the premier open-access platform for high-impact research that transcends traditional disciplinary boundaries. We are dedicated to publishing work that not only advances fundamental understanding but explicitly directs that knowledge toward tangible applications, innovative solutions, and forward-looking research for societal and technological benefit.
 							</p>
 							<p class="mb-2">
 								Our continuous publication model ensures that these pioneering ideas are disseminated to the global research community and industry practitioners with minimal delay, fostering immediate collaboration and accelerating the path from discovery to real-world implementation.
@@ -241,7 +247,7 @@
 									<div class="d-inline-block bg-primary bg-opacity-25 shadow-primary rounded-3 position-absolute top-0 translate-middle-y p-3">
 										<i class="bi bi-eye d-block m-1 h2 text-primary"></i>
 									</div>
-									<h3 class="h5">Practice Visioneering</h3>
+									<h3 class="h5">Anticipate Future Challenges</h3>
 									<p class="mb-0">Encourage forward-looking research that anticipates future technological needs and societal challenges, shaping the trajectory of applied science rather than merely following it.</p>
 								</div>
 							</a>
@@ -325,22 +331,6 @@
 
 						<div class="row mt-4">
 							<div class="col-md-6 col-lg-3 mb-3">
-								<h6 class="text-purple mb-3"><i class="bi bi-journal-text me-2"></i>Scholarly Communication & Open Science</h6>
-								<ul class="list-unstyled">
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Open Access Publishing</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Open Science Practices</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Research Data Management</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Digital Repositories</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Bibliometrics & Altmetrics</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Peer Review Innovations</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Preprints & Post-publication Review</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Research Integrity</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Science Policy & Evaluation</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Digital Scholarship</span></li>
-								</ul>
-							</div>
-
-							<div class="col-md-6 col-lg-3 mb-3">
 								<h6 class="text-danger mb-3"><i class="bi bi-flask me-2"></i>Applied Sciences</h6>
 								<ul class="list-unstyled">
 									<li class="mb-2"><span class="badge bg-danger topic-badge">Chemical Engineering</span></li>
@@ -385,6 +375,16 @@
 									<li class="mb-2"><span class="badge bg-dark topic-badge">Disaster Resilience Tech</span></li>
 									<li class="mb-2"><span class="badge bg-dark topic-badge">Global Health Technology</span></li>
 									<li class="mb-2"><span class="badge bg-dark topic-badge">Space Technology & Applications</span></li>
+								</ul>
+							</div>
+
+							<div class="col-md-6 col-lg-3 mb-3">
+								<h6 class="text-purple mb-3"><i class="bi bi-journal-text me-2"></i>Out of Scope</h6>
+								<ul class="list-unstyled">
+									<li class="mb-2"><span class="badge bg-purple topic-badge">Purely theoretical work without applied component</span></li>
+									<li class="mb-2"><span class="badge bg-purple topic-badge">Routine technical reports</span></li>
+									<li class="mb-2"><span class="badge bg-purple topic-badge">Unvalidated computational models</span></li>
+									<li class="mb-2"><span class="badge bg-purple topic-badge">Non-reproducible studies</span></li>
 								</ul>
 							</div>
 						</div>
@@ -448,7 +448,7 @@
 							</tr>
 							<tr>
 								<td><strong>Perspective / Vision</strong></td>
-								<td>Forward-looking articles presenting new viewpoints, hypotheses, or speculative "visioneering" on future directions.</td>
+								<td>Forward-looking articles presenting new viewpoints, hypotheses, or speculative forward-looking research on future directions.</td>
 								<td>4,000</td>
 							</tr>
 							<tr>
@@ -502,7 +502,7 @@
 								</button>
 							</div>
 							<div class="form-text mt-2 ps-1">
-								<small class="opacity-75">Indexing provided by Google for solav.me</small>
+								<small class="opacity-75">Search provided by Google</small>
 							</div>
 						</form>
 
@@ -559,6 +559,7 @@
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
 							<span class="issn-text">ISSN request pending</span>
 						</div>
+						<small class="text-muted text-xs">Adheres to Committee on Publication Ethics (COPE) Core Practices</small>
 
 					</div>
 
