--- a/ethics.html
+++ b/ethics.html
@@ -35,7 +35,6 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
-		gtag('js', new Date());
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
 		</script>
@@ -90,7 +89,7 @@
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item">Volume 2 (2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
@@ -99,7 +98,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Volume 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -110,12 +109,19 @@
 									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item active">Publication Ethics</a></li>
-										<li><a href="/ai" class="dropdown-item">AI in Research Policy</a></li>
+										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
-										<li><a href="/open-submission" class="dropdown-item">Open Submission Policy</a></li>
+										<li><a href="/open-submission" class="dropdown-item">Open Submission</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item">Archiving & Management</a></li>
+										<li><a href="/corrections-retractions" class="dropdown-item">Corrections, Retractions & Withdrawal</a></li>
+										<li><a href="/appeals-complaints" class="dropdown-item">Appeals & Complaints</a></li>
+										<li><a href="/conflict-of-interest" class="dropdown-item">Conflict of Interest</a></li>
+										<li><a href="/plagiarism" class="dropdown-item">Plagiarism</a></li>
+										<li><a href="/editorial" class="dropdown-item">Editorial</a></li>
+										<li><a href="/research-integrity" class="dropdown-item">Research Integrity</a></li>
+										<li><a href="/copyright-licensing" class="dropdown-item">Copyright and Licensing</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
@@ -169,12 +175,19 @@
 					<div class="section-nav pt-0 mt-0">
 						<h6 class="mb-3 fw-bold"><i class="bi bi-shield-check me-2"></i>Our Policies</h6>
 						<a href="/ethics" class="d-block mb-2 mobile-nav-link active"><i class="bi bi-heart-pulse"></i> Publication Ethics</a>
-						<a href="/ai" class="d-block mb-2 mobile-nav-link"><i class="bi bi-cpu"></i> AI in Research Policy</a>
+						<a href="/ai" class="d-block mb-2 mobile-nav-link"><i class="bi bi-cpu"></i> AI in Research</a>
 						<a href="/apc" class="d-block mb-2 mobile-nav-link"><i class="bi bi-currency-exchange"></i> Article Processing Charges</a>
 						<a href="/review" class="d-block mb-2 mobile-nav-link"><i class="bi bi-people"></i> Peer Review Process</a>
-						<a href="/open-submission" class="d-block mb-2 mobile-nav-link"><i class="bi bi-door-open"></i> Open Submission Policy</a>
+						<a href="/open-submission" class="d-block mb-2 mobile-nav-link"><i class="bi bi-door-open"></i> Open Submission</a>
 						<a href="/access" class="d-block mb-2 mobile-nav-link"><i class="bi bi-unlock"></i> Open Access & Licensing</a>
 						<a href="/archiving" class="d-block mb-2 mobile-nav-link"><i class="bi bi-server"></i> Archiving & Management</a>
+						<a href="/corrections-retractions" class="d-block mb-2 mobile-nav-link"><i class="bi bi-exclamation-triangle"></i> Corrections & Retractions</a>
+						<a href="/appeals-complaints" class="d-block mb-2 mobile-nav-link"><i class="bi bi-chat-square-text"></i> Appeals & Complaints</a>
+						<a href="/conflict-of-interest" class="d-block mb-2 mobile-nav-link"><i class="bi bi-eye-slash"></i> Conflict of Interest</a>
+						<a href="/plagiarism" class="d-block mb-2 mobile-nav-link"><i class="bi bi-file-earmark-check"></i> Plagiarism</a>
+						<a href="/editorial" class="d-block mb-2 mobile-nav-link"><i class="bi bi-person-badge"></i> Editorial</a>
+						<a href="/research-integrity" class="d-block mb-2 mobile-nav-link"><i class="bi bi-shield-check"></i> Research Integrity</a>
+						<a href="/copyright-licensing" class="d-block mb-2 mobile-nav-link"><i class="bi bi-c-circle"></i> Copyright & Licensing</a>
 						
 						<h6 class="mt-5 mb-3 fw-bold"><i class="bi bi-question-circle me-2"></i>Quick Links</h6>
 						<a href="/guidelines" class="d-block mb-2 mobile-nav-link"><i class="bi bi-journal-text"></i> Author Guidelines</a>
@@ -190,12 +203,19 @@
 						<div class="section-nav mb-4">
 							<h6 class="mb-3 fw-bold"><i class="bi bi-shield-check me-2"></i>Our Policies</h6>
 							<a href="/ethics" class="active"><i class="bi bi-heart-pulse"></i> Publication Ethics</a>
-							<a href="/ai"><i class="bi bi-cpu"></i> AI in Research Policy</a>
+							<a href="/ai"><i class="bi bi-cpu"></i> AI in Research</a>
 							<a href="/apc"><i class="bi bi-currency-exchange"></i> Article Processing Charges</a>
 							<a href="/review"><i class="bi bi-people"></i> Peer Review Process</a>
-							<a href="/open-submission"><i class="bi bi-door-open"></i> Open Submission Policy</a>
+							<a href="/open-submission"><i class="bi bi-door-open"></i> Open Submission</a>
 							<a href="/access"><i class="bi bi-unlock"></i> Open Access & Licensing</a>
 							<a href="/archiving"><i class="bi bi-server"></i> Archiving & Management</a>
+							<a href="/corrections-retractions"><i class="bi bi-exclamation-triangle"></i> Corrections & Retractions</a>
+							<a href="/appeals-complaints"><i class="bi bi-chat-square-text"></i> Appeals & Complaints</a>
+							<a href="/conflict-of-interest"><i class="bi bi-eye-slash"></i> Conflict of Interest</a>
+							<a href="/plagiarism"><i class="bi bi-file-earmark-check"></i> Plagiarism</a>
+							<a href="/editorial"><i class="bi bi-person-badge"></i> Editorial</a>
+							<a href="/research-integrity"><i class="bi bi-shield-check"></i> Research Integrity</a>
+							<a href="/copyright-licensing"><i class="bi bi-c-circle"></i> Copyright & Licensing</a>
 
 							<h6 class="mt-5 mb-3 fw-bold"><i class="bi bi-question-circle me-2"></i>Quick Links</h6>
 							<a href="/guidelines"><i class="bi bi-journal-text"></i> Author Guidelines</a>
@@ -213,7 +233,7 @@
 									</div>
 									<div>
 										<h2 class="h3 mb-1">Publication Ethics and Malpractice Statement</h2>
-										<p class="text-muted mb-0">Official COPE-aligned statement of ethical principles</p>
+										<p class="text-muted mb-0">SOLAV Journal adheres to the Committee on Publication Ethics (COPE) Core Practices. All editorial decisions, peer review procedures, and publication ethics follow COPE guidelines.</p>
 									</div>
 								</div>
 								
@@ -530,7 +550,7 @@
 								</button>
 							</div>
 							<div class="form-text mt-2 ps-1">
-								<small class="opacity-75">Indexing provided by Google for solav.me</small>
+								<small class="opacity-75">Search provided by Google</small>
 							</div>
 						</form>
 
@@ -587,6 +607,7 @@
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
 							<span class="issn-text">ISSN request pending</span>
 						</div>
+						<small class="text-muted text-xs">Adheres to Committee on Publication Ethics (COPE) Core Practices</small>
 
 					</div>
 
