--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
-		gtag('js', new Date());
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
 		</script>
@@ -90,7 +89,7 @@
 										<div class="d-lg-flex pt-lg-1">
 											<div class="mega-dropdown-column px-0">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item">Volume 2 (2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
@@ -99,7 +98,7 @@
 												<div class="card ms-2 h-100 dropdown-menuAnimated">
 													<h6 class="px-3 mb-2 pt-1">Older Archives</h6>
 													<ul class="list-unstyled mb-3">
-														<li><a href="/archive2025" class="dropdown-item">Voulme 1(2025)</a></li>
+														<li><a href="/archive2025" class="dropdown-item">Volume 1 (2025)</a></li>
 													</ul>													
 												</div>
 											</div>
@@ -110,12 +109,19 @@
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
-										<li><a href="/ai" class="dropdown-item">AI in Research Policy</a></li>
+										<li><a href="/ai" class="dropdown-item">AI in Research</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
-										<li><a href="/open-submission" class="dropdown-item">Open Submission Policy</a></li>
+										<li><a href="/open-submission" class="dropdown-item">Open Submission</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item">Archiving & Management</a></li>
+										<li><a href="/corrections-retractions" class="dropdown-item">Corrections, Retractions & Withdrawal</a></li>
+										<li><a href="/appeals-complaints" class="dropdown-item">Appeals & Complaints</a></li>
+										<li><a href="/conflict-of-interest" class="dropdown-item">Conflict of Interest</a></li>
+										<li><a href="/plagiarism" class="dropdown-item">Plagiarism</a></li>
+										<li><a href="/editorial" class="dropdown-item">Editorial</a></li>
+										<li><a href="/research-integrity" class="dropdown-item">Research Integrity</a></li>
+										<li><a href="/copyright-licensing" class="dropdown-item">Copyright and Licensing</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
@@ -158,7 +164,7 @@
 								</div>
 							</div>
 							<h1 class="fw-bold centered-text pt-3">SOLAV Journal</h1>
-							<h2 class="fs-6 centered-text small px-3">» A Scholarly Platform for Interdisciplinary Visioneering and Applied Futures «</h2>
+							<h2 class="fs-6 centered-text small px-3">» A Scholarly Platform for Interdisciplinary Applied Futures Research «</h2>
 						</div>
 					</div>
 				</div>
@@ -170,7 +176,7 @@
 						<div class="col-xl-12 col-md-12 text-center text-md-start p-5 py-2 pt-4">
 							<h2>Welcome to SOLAV</h2>
 							<p>
-								SOLAV (Scholarly Open-Library of Applied Visioneering) is a rigorously peer-reviewed, open-access journal dedicated to the rapid dissemination of significant research across a broad spectrum of applied sciences and interdisciplinary technology. We operate on a continuous publication model, ensuring your work is published as soon as the review process is complete.
+								SOLAV (A Scholarly Platform for Interdisciplinary Applied Futures Research) is a rigorously peer-reviewed, open-access journal dedicated to the rapid dissemination of significant research across a broad spectrum of applied sciences and interdisciplinary technology. We operate on a continuous publication model, ensuring your work is published as soon as the review process is complete.
 							</p>
 						</div>
 					</div>
@@ -360,7 +366,7 @@
 										Rigorous Scholarly Assessment
 									</h2>
 									<p class="fs-sm text-body mb-0">
-										Every submission undergoes thorough, <strong>single-blind peer review</strong> by at least two domain experts. Our editorial board ensures constructive, timely evaluation that upholds academic standards while providing developmental feedback to strengthen scholarship.
+										Every submission undergoes thorough, <strong>Single-blind peer review</strong> by at least two domain experts. Our editorial board ensures constructive, timely evaluation that upholds academic standards while providing developmental feedback to strengthen scholarship.
 									</p>
 								</div>
 							</a>
@@ -412,7 +418,7 @@
 									<ul class="mb-0">
 										<li class="mb-2">Permanent ID and landing page</li>
 										<li class="mb-2">Multiple redundant backups and version control</li>
-										<li>25+ years guaranteed digital preservation</li>
+										<li>Permanent preservation via Zenodo (CERN), a CoreTrustSeal-certified repository.</li>
 									</ul>
 								</div>
 							</a>
@@ -436,16 +442,16 @@
 					<div class="col-md-6 col-lg-3">
 						<div class="card border-0 bg-primary text-white text-center py-4">
 							<div class="card-body">
-								<div class="display-4 fw-bold mb-2">100%</div>
-								<p class="mb-0">Diamond Open Access</p>
-								<small class="opacity-75">No author-facing charges</small>
+								<div class="display-5 fw-bold mb-2">100%</div>
+								<p class="mb-0">Open Access Publishing</p>
+								<small class="opacity-75">Fair and Transparent APC Policy</small>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-3">
 						<div class="card border-0 bg-light text-center py-4">
 							<div class="card-body">
-								<div class="display-4 fw-bold mb-2 text-primary">4-6</div>
+								<div class="display-5 fw-bold mb-2 text-primary">4-6</div>
 								<p class="mb-0">Weeks to First Decision</p>
 								<small class="text-muted">Median review timeline</small>
 							</div>
@@ -454,7 +460,7 @@
 					<div class="col-md-6 col-lg-3">
 						<div class="card border-0 bg-primary text-white text-center py-4">
 							<div class="card-body">
-								<div class="display-4 fw-bold mb-2">CC BY</div>
+								<div class="display-5 fw-bold mb-2">CC BY</div>
 								<p class="mb-0">Open License</p>
 								<small class="opacity-75">Maximum reuse rights</small>
 							</div>
@@ -463,9 +469,9 @@
 					<div class="col-md-6 col-lg-3">
 						<div class="card border-0 bg-light text-center py-4">
 							<div class="card-body">
-								<div class="display-4 fw-bold mb-2 text-primary">∞</div>
-								<p class="mb-0">Permanent Archiving</p>
-								<small class="text-muted">10+ years guaranteed</small>
+								<div class="display-5 fw-bold mb-2 text-primary">Archiving</div>
+								<p class="mb-0">Permanent preservation</p>
+								<small class="text-muted">Via Zenodo (CERN), a CoreTrustSeal-certified repository.</small>
 							</div>
 						</div>
 					</div>
@@ -597,7 +603,7 @@
 								</button>
 							</div>
 							<div class="form-text mt-2 ps-1">
-								<small class="opacity-75">Indexing provided by Google for solav.me</small>
+								<small class="opacity-75">Search provided by Google</small>
 							</div>
 						</form>
 
@@ -654,6 +660,7 @@
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
 							<span class="issn-text">ISSN request pending</span>
 						</div>
+						<small class="text-muted text-xs">Adheres to Committee on Publication Ethics (COPE) Core Practices</small>
 					</div>
 
 					<div class="col-lg-2 col-md-4">
