--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 							</div>
 							<h1 class="fw-bold centered-text pt-3">SOLAV Journal</h1>
 							<h2 class="fs-6 centered-text small px-3">» A Scholarly Platform for Interdisciplinary Applied Futures Research «</h2>
+							<h3 class="btn gradient-border-btn rounded-pill mt-0"><span class="gradient-text">Volume 2 (2026)</span></h3>
 						</div>
 					</div>
 				</div>
